# SOCIAL-BACKEND

./: .flake8  .gitignore  base.txt  manage.py  packages.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup.txt
accounts/: adapter.py  admin.py  authentication.py  models.py  serializers.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py  0002_account_google_account.py  0002_account_last_location.py  0002_alter_account_options.py  0002_remove_account_profile_url.py  0003_account_cover_image_account_cover_image_hash.py  0003_account_verified_company.py  0004_account_tagline_account_website.py  0004_alter_account_name.py  0005_account_profile_image_url.py  0005_follow.py  0006_account_points.py  0006_remove_account_profile_image.py  0007_account_referral_code_account_referred_accounts.py  0007_remove_account_cover_image_account_cover_image_url.py  0008_alter_account_referral_code.py
authentication/: backends.py  serializers.py  urls.py  utils.py  views.py
base/: asgi.py  bots.py  hosts.py  middleware.py  sitemap.py  urls.py  utils.py  widgets.py  wsgi.py
base/settings/: base.py  dev.py  development.py  production.py
dj_waanverse_auth/: __init__.py  admin.py  apps.py  backends.py  messages.py  middleware.py  models.py  readme.md  serializers.py  settings.py  signals.py  urls.py  utils.py  validators.py  views.py
dj_waanverse_auth/migrations/: 0001_initial.py  0003_alter_userloginactivity_account.py  (+2 more)
main/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
notifications/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
prerender/: admin.py  apps.py  context_processors.py  models.py  scrape.py  sitemap.py  urls.py  views.py
sitemap/: urls.py  views.py
sockets/: admin.py  consumers.py  models.py  routing.py  utils.py
(+62 files in other folders)
