[metadata]
name = dj_waanverse_auth
author = Waanverse Labs Inc.
author_email = software@waanverse.com
description = A comprehensive Waanverse Labs Inc. internal package for managing user accounts and authentication
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Khaotungkulmethee Pattawee
maintainer_email = tawee@waanverse.com
license = Internal Use License
url = https://docs.waanverse.com/dj-waanverse-auth
keywords = django, user accounts, authentication, JWT, MFA
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3.11
    License :: Free To Use But Restricted
    Natural Language :: English
    Operating System :: OS Independent
    Framework :: Django :: 5.1
    Environment :: Web Environment
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Communications :: Email
    Topic :: Software Development :: Libraries
    Topic :: Security

project_urls =
    Documentation = https://docs.waanverse.com/dj-waanverse-auth
    Developers = https://www.waanverse.com
    Blog = https://blog.waanverse.com
    

[options]
include_package_data = true
packages = find:
python_requires = >=3.11.9, <4.0
install_requires =
    Django>=5.1,<6.0.0
    djangorestframework>=3.15.2
    djangorestframework-simplejwt>=5.3.1
    pyotp>=2.9.0
    user-agents>=2.2.0
    cryptography>=43.0.0
    requests>=2.32.3


[options.packages.find]
exclude =
    demo
    tests
    tests/*.py
    tests.*


[sdist]
formats = gztar

[flake8]
extend-ignore = E501 F403 F405
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,core/settings/base.py
max-complexity = 10
